# MUL-JPEG-Encoder

./: .gitmodules  CMakeLists.txt
src/: ArgumentParser.cpp  ArgumentParser.h  Encoder.cpp  Encoder.h  EncoderDefaultValues.h  main.cpp  toojpeg.cpp  toojpeg.h
